[package]
name = "tray-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trayicon = { version = "0.1.3", features = ["winit"] }
winit = "0.25"
dirs = "4.0.0"
rodio = "0.16.0"

[build-dependencies]
windres = "0.2.2"
